--- a/career.html
+++ b/career.html
@@ -143,12 +143,12 @@
   <!-- Job Card 1 -->
   <div class="col-md-4">
       <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
-        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
-        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <h4 class="fw-bold mb-2 text-muted">Social Media Expert</h4>
+        <p class="text-muted mb-3">We’re looking for a creative, data-driven digital expert to elevate our online presence!</p>
         <ul class="list-unstyled small mb-3">
-          <li><strong>Experience:</strong> 2+ Years</li>
-          <li><strong>Location:</strong> Kochi, India</li>
-          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
+          <li><strong>Experience in  </strong> Dubai’s digital marketing scene</li>
+          <li><strong>Location:</strong> Travel-loving work culture</li>
+          <li><strong>Proven ability:</strong>  to scale social media</li>
         </ul>
         <div class="text-start">
           <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
@@ -162,12 +162,13 @@
 
 
       <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
-        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
-        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <h4 class="fw-bold mb-2 text-muted">Holiday Consultant</h4>
+        <p class="text-muted mb-3">Plan and book complete itineraries including flights, hotels, and activities</p>
         <ul class="list-unstyled small mb-3">
-          <li><strong>Experience:</strong> 2+ Years</li>
-          <li><strong>Location:</strong> Kochi, India</li>
-          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
+          <li><strong>Experience:</strong> 0–2 years</li>
+          <li><strong>Location:</strong>  UAE</li>
+          <li> Experience in<strong> Umrah or religious</strong>  tourism is a bonus
+</li>
         </ul>
         <div class="text-start">
           <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
@@ -181,12 +182,13 @@
 
 
       <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
-        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
-        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <h4 class="fw-bold mb-2 text-muted">Global Visa Consultant</h4>
+        <p class="text-muted mb-3">Looking for a detail-oriented and customer-focused Global Visa Consultant to assist clients</p>
         <ul class="list-unstyled small mb-3">
-          <li><strong>Experience:</strong> 2+ Years</li>
-          <li><strong>Location:</strong> Kochi, India</li>
-          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
+          <li><strong>Experience:</strong> 1+ years</li>
+          <li><strong>Location:</strong> UAE</li>
+          <li><strong> Excellent:</strong> communication and client-handling skills
+</li>
         </ul>
         <div class="text-start">
           <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
@@ -282,6 +284,10 @@
           </div>
         </div>
       </div>
+
+              <div class="text-start">
+          <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Read More</a>
+        </div>
     </div>
   </div>
 </section>
