--- a/services.html
+++ b/services.html
@@ -456,6 +456,7 @@
 
 
 
+
 <!-- testimonial -->
 
 
@@ -474,7 +475,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
+          <p class="text-muted testi-para">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -485,13 +486,13 @@
       <div class="col-md-6">
         <div class="card p-4 shadow-sm border-0 rounded-4 h-100">
           <div class="d-flex align-items-center gap-3 mb-3">
-            <img src="./assets/images/customer2.png" alt="Mary Johnson" class="rounded-circle" width="50" height="50">
+            <img src="./assets/images/customer2.jpg" alt="VIGNESH S" class="rounded-circle" width="50" height="50">
             <div class="text-start">
-              <h6 class="mb-0 fw-bold">Hasna Parveen</h6>
-              <small class="text-muted">Human Resources Specialist</small>
+              <h6 class="mb-0 fw-bold">VIGNESH S</h6>
+              <small class="text-muted">Local Guide</small>
             </div>
           </div>
-          <p class="text-muted">“I recently had the pleasure of working with Traveleo Tourism LLC for my visa change from UAE to Oman, and I can't express how grateful I am for their exceptional service! ”</p>
+          <p class="text-muted">“I recently used Traveleo for a 2-month UAE visit visa for my friend. The service was extremely professional, fast, and hassle-free. They handled everything smoothly and kept me updated throughout the process. I highly recommend Traveleo to anyone looking for visa services. Thank you for the great support! ”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -534,6 +535,8 @@
     </div>
   </div>
 </section>
+
+
 
 
   
