--- a/packages.html
+++ b/packages.html
@@ -453,6 +453,7 @@
 </section>
 
 
+
 <!-- testimonial -->
 
 
@@ -482,13 +483,13 @@
       <div class="col-md-6">
         <div class="card p-4 shadow-sm border-0 rounded-4 h-100">
           <div class="d-flex align-items-center gap-3 mb-3">
-            <img src="./assets/images/customer2.png" alt="Mary Johnson" class="rounded-circle" width="50" height="50">
+            <img src="./assets/images/customer2.jpg" alt="VIGNESH S" class="rounded-circle" width="50" height="50">
             <div class="text-start">
-              <h6 class="mb-0 fw-bold">Hasna Parveen</h6>
-              <small class="text-muted">Human Resources Specialist</small>
+              <h6 class="mb-0 fw-bold">VIGNESH S</h6>
+              <small class="text-muted">Local Guide</small>
             </div>
           </div>
-          <p class="text-muted testi-para">“I recently had the pleasure of working with Traveleo Tourism LLC for my visa change from UAE to Oman, and I can't express how grateful I am for their exceptional service! ”</p>
+          <p class="text-muted">“I recently used Traveleo for a 2-month UAE visit visa for my friend. The service was extremely professional, fast, and hassle-free. They handled everything smoothly and kept me updated throughout the process. I highly recommend Traveleo to anyone looking for visa services. Thank you for the great support! ”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -505,7 +506,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted testi-para">“I recently used Traveleo Tourism LLC for my UAE visit visa renewal, and I couldn't be happier with the experience! The entire process was smooth and hassle-free, with every detail well-coordinated from start to finish.”</p>
+          <p class="text-muted">“I recently used Traveleo Tourism LLC for my UAE visit visa renewal, and I couldn't be happier with the experience! The entire process was smooth and hassle-free, with every detail well-coordinated from start to finish.”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -522,7 +523,7 @@
               <small class="text-muted">Business Traveler</small>
             </div>
           </div>
-          <p class="text-muted testi-para">“I purchased visa and ticket services for my family’s visit to the UAE from Traveleo Tourism LLC, Dubai, and I’m extremely satisfied. The process was smooth, transactions were handled professionally, and I felt completely comfortable dealing with them. Thank you, Traveleo, for your excellent service.!”</p>
+          <p class="text-muted">“I purchased visa and ticket services for my family’s visit to the UAE from Traveleo Tourism LLC, Dubai, and I’m extremely satisfied. The process was smooth, transactions were handled professionally, and I felt completely comfortable dealing with them. Thank you, Traveleo, for your excellent service.!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -531,6 +532,8 @@
     </div>
   </div>
 </section>
+
+
 
   <!-- Newsletter Section Start -->
   <section class="newsletter-section text-center">
